# d3d11_samples

./: .buildinfo  .gitignore  .gitmodules  CMakeLists.txt  README.md  create_device.html  dxsas.html  genindex.html  index.html  objects.inv  requirements.txt  search.html  searchindex.js  source.html  spec.html  tinygizmo.html  todo.html
.doctrees/: create_device.doctree  dxsas.doctree  environment.pickle  index.doctree  source.doctree  spec.doctree  tinygizmo.doctree  todo.doctree
.doctrees/basic/: backbuffer.doctree  basic_pipeline.doctree  blend_state.doctree  compile_shader.doctree  constant_buffer.doctree  create_device.doctree  create_swapchain.doctree  create_window.doctree  imgui.doctree  imgui_dockspace.doctree  index.doctree  input_assembler.doctree  mip_map.doctree  post_effect.doctree  render_target.doctree  render_target_from_swapchain.doctree  render_target_from_texture.doctree  shader_reflection.doctree  texture.doctree
.doctrees/gltf/: gltf.doctree
.doctrees/pipeline/: basic_pipeline.doctree  blend_state.doctree  compile_shader.doctree  constant_buffer.doctree  dxsas.doctree  index.doctree  input_assembler.doctree  mip_map.doctree  post_effect.doctree  shader_reflection.doctree  texture.doctree
.doctrees/shading/: ads.doctree  fresnel.doctree  pbr.doctree  specular.doctree  tangent_space.doctree
.doctrees/three_d/: camera.doctree  depth_test.doctree  gltf.doctree  index.doctree  input_assembler.doctree  orbit_camera.doctree  scene.doctree  spec.doctree  tinygizmo.doctree
.doctrees/two_d/: index.doctree
.github/workflows/: sphinx.yml
MinTriangle/: CompileShaderFromFile.cpp  CompileShaderFromFile.h  D3D11Manager.cpp  D3D11Manager.h  MinTriangle.fx  ResPtr.h  constantbuffer.cpp  constantbuffer.h  imageutil.cpp  imageutil.h  main.cpp  premake4.lua  shader.cpp  shader.h
_external/: CMakeLists.txt
_external/MikkTSpace/: CMakeLists.txt
_external/catch2/: CMakeLists.txt
_external/imgui/: CMakeLists.txt
_external/json/: CMakeLists.txt
_external/magic_enum/: CMakeLists.txt
_external/stb/: CMakeLists.txt
_external/teapot/: CMakeLists.txt  teapot.h
_external/tinygizmo/: CMakeLists.txt  minalg.h  tiny-gizmo.cpp  tiny-gizmo.hpp
_sources/: create_device.md.txt  dxsas.md.txt  index.md.txt  spec.md.txt
_sources/basic/: backbuffer.md.txt  basic_pipeline.md.txt  compile_shader.md.txt  constant_buffer.md.txt  create_device.md.txt  create_swapchain.md.txt  input_assembler.md.txt  render_target.md.txt  (+2 more)
_static/: bizstyle.js
assets/: aabb.hlsl  basic.hlsl  constant.hlsl  depth.hlsl  gltf.hlsl  grid.hlsl  gs_screen.cginc  ia.hlsl  mvp.hlsl  teapot.hlsl  texture.hlsl  tinygizmo.hlsl
basic/: backbuffer.html  basic_pipeline.html  blend_state.html  compile_shader.html  constant_buffer.html  create_device.html  create_swapchain.html  create_window.html  imgui.html  imgui_dockspace.html  index.html  input_assembler.html  mip_map.html  post_effect.html  render_target.html  render_target_from_swapchain.html  render_target_from_texture.html  shader_reflection.html  texture.html
docs/: conf.py  dxsas.md  index.md  index.rst  source.md  spec.md  todo.md
gltf/: gltf.html
lib/: CMakeLists.txt  app.cpp  app.h  renderer.cpp  renderer.h  scene_renderer.cpp  scene_renderer.h  update_camera.h
lib/banana/: asset.cpp  asset.h  bytereader.h  dockspace.cpp  dockspace.h  geometry.cpp  geometry.h  glb.h  gltf.cpp  gltf.h  grid_constant.h  image.cpp  image.h  material.h  mesh.h  node.cpp  node.h  orbit_camera.cpp  orbit_camera.h  scene.h  scene_command.cpp  scene_command.h  scene_processor.cpp  scene_processor.h  semantics.h  types.cpp  types.h
lib/gorilla/: constant_buffer.cpp  constant_buffer.h  device.cpp  device_and_target.cpp  device_and_target.h  dockspace.cpp  dockspace.h  drawable.cpp  drawable.h  dxsas.cpp  dxsas.h  gizmo.cpp  gizmo.h  gltf.cpp  gltf.h  image.cpp  input_assembler.cpp  input_assembler.h  mesh.cpp  mesh.h  pipeline.cpp  pipeline.h  render_target.cpp  render_target.h  renderer.cpp  renderer.h  shader.cpp  shader.h  shader_reflection.cpp  shader_reflection.h  texture.cpp  texture.h  texture_and_target.cpp  texture_and_target.h  window.cpp  window.h
pipeline/: basic_pipeline.html  blend_state.html  compile_shader.html  constant_buffer.html  dxsas.html  index.html  input_assembler.html  mip_map.html  post_effect.html  shader_reflection.html  texture.html
samples/: CMakeLists.txt  readme.md
samples/BasicPipeline/: CMakeLists.txt  basic.hlsl  main.cpp  pipeline.cpp  pipeline.h
samples/BasicPipeline/gorilla/: asset.cpp  asset.h
samples/Camera/: CMakeLists.txt  main.cpp  mvp.hlsl  orbit_camera.h
samples/CompileShader/: CMakeLists.txt  main.cpp  shader.cpp  shader.h
samples/CompileShader/gorilla/: shader.cpp  shader.h
samples/ConstantBuffer/: CMakeLists.txt  constant_buffer.cpp  constant_buffer.h  main.cpp
samples/ConstantBuffer/gorilla/: constant_buffer.h
samples/DepthTest/: CMakeLists.txt  main.cpp
samples/ImageLoader/: CMakeLists.txt  main.cpp
samples/ImageLoader/gorilla/: image.h
samples/InputAssembler/: CMakeLists.txt  ia.hlsl  main.cpp
samples/InputAssembler/gorilla/: input_assembler.cpp  input_assembler.h
samples/InputLayout/: CMakeLists.txt  input_layout.cpp  input_layout.h  main.cpp
samples/MinTriangle/: CMakeLists.txt  CompileShaderFromFile.cpp  CompileShaderFromFile.h  D3D11Manager.cpp  D3D11Manager.h  MinTriangle.fx  constantbuffer.cpp  constantbuffer.h  debugprint.h  imageutil.cpp  imageutil.h  main.cpp  resource.h  resource.rc  shader.cpp  shader.h
samples/ShaderReflection/: CMakeLists.txt  main.cpp  shader_reflection.cpp  shader_reflection.h
samples/Texture/: CMakeLists.txt  main.cpp  texture.h  texture.hlsl
samples/Texture/gorilla/: texture.cpp
shading/: ads.html  fresnel.html  pbr.html  specular.html  tangent_space.html
tests/: CMakeLists.txt  hlslparse_test.cpp
three_d/: camera.html  depth_test.html  gltf.html  index.html  input_assembler.html  orbit_camera.html  scene.html  spec.html  tinygizmo.html
two_d/: index.html
(+162 files in other folders)
